1 June 2005:  Menelaos Karavelas
- added types Arity and result_type in Construct_Apollonius_vertex_2.
- in Construct_Apollonius_*_2: the constructor object for the Apollonius
  site or vertex is now taken from the geometric traits.
- fixed bug in visualization of primal Apollonius graph when the dual Voronoi
  edge is degenerate (zero length).

29 May 2005:  Menelaos Karavelas
- calls to mirror_vertex and mirror_index made through the faces are
  now made through the TDS

21 May 2005:  Menelaos Karavelas
- added tds() method that returns the triangulation data structure

19 May 2005:  Menelaos Karavelas
- added the types Vertex, Face and Triangulation_data_structure in the
  Apollonius_graph_2 class; these types should also appear in the doc of
  the class

17 May 2005:  Menelaos Karavelas
- changed maintainer's email

27 April 2005:  Menelaos Karavelas
- fixed misprint sent by Anatoly.Zaretksy <anatoly.zaretsky@gmail.com>
  in method: Object_2 dual(const Face_handle& f) of Apollonius_graph_2

7 March 2005:  Menelaos Karavelas
- replaced calls to the vertex handle methods degree() and
  incident_{edges,faces}() by calls to the corresponding TDS methods that
  take the vertex as argument. This was done in compliance with the latest
  changes in the design of the Triangulation_2 software.
- modified test suite to comply with the above change
- added access method in Apollonius_graph_2 that returns a const reference
  to the TDS.
- added fix for a nasty warning on the PowerPC version of G++ 3.4

4 October 2004:  Menelaos Karavelas
- removed "\ccInclude{iostream}" from Apollonius_site_2.tex in the reference
  manual; it was causing the manual tools to post a warning

10 September 2004:  Menelaos Karavelas
- test.h: fixed typo that was creating an error in Microsoft and
  Intel compilers.

7 September 2004:  Menelaos Karavelas
- Documentation & code: replaced Agds_2 by Tds_2

6 September 2004:  Menelaos Karavelas