@@ -1,3 +1,14 @@
+4 June 2005:  Menelaos Karavelas
+- Apollonius_graph_2 and Apollonius_graph_hierarchy_2: added methods file_input
+  and file_output that read and write from and to a file. The data written
+  consists of the visible and hidden sites and the triangulation data
+  structure; in the case of the hierarchy, the entire hierarchy is encoded.
+- Apollonius_graph_2 and Apollonius_graph_hierarchy_2: added operator>> and
+  operator<< that read and write from and to a stream; the methods file_input
+  and file_output are used to implement the two operators.
+- modified the test suite to test the above mentioned I/O functionality.
+- updated documentation to reflect the newly added I/O functionality.
+
 1 June 2005:  Menelaos Karavelas
 - added types Arity and result_type in Construct_Apollonius_vertex_2.
 - in Construct_Apollonius_*_2: the constructor object for the Apollonius
